fix states and processing of the transaction are not centered, fix TXid link

--- a/src/Components/Cards/Sovryn/style.scss
+++ b/src/Components/Cards/Sovryn/style.scss
@@ -33,7 +33,7 @@
   .content-container {
     padding: 13px;
     ul {
-      margin-top: 15px;
+      // margin-top: 15px;
       padding-left: 15px;
       li {
         line-height: 19px;
@@ -49,7 +49,7 @@
     opacity: .1;
   }
   .FastBTCLeftPanel {
-    margin-top: 66px;
+    margin-top: 54px;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
